//
//  Constants.swift
//  mvvm-flickr-autolayout
//
//  Created by Daniel on 17.03.2021.
//

import Foundation

enum AccessibilityIdentifiers {
    static let FirstTab = "Tab 1"
    static let SecondTab = "Tab 2"
    static let SearchField = "Search"
    static let CollectionView = "CollectionView"
}
